--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="windows-1252">
@@ -27,7 +27,7 @@
             var minutos = fecha.getMinutes();
             var segundos = fecha.getSeconds();
 
-            // Agregar un cero delante si el número es menor que 10
+            // Agregar un cero delante si el nÃºmero es menor que 10
             horas = horas < 10 ? '0' + horas : horas;
             minutos = minutos < 10 ? '0' + minutos : minutos;
             segundos = segundos < 10 ? '0' + segundos : segundos;
@@ -39,7 +39,7 @@
         // Actualizar la hora cada segundo
         setInterval(mostrarHora, 1000);
 
-        // Mostrar la hora al cargar la página
+        // Mostrar la hora al cargar la pÃ¡gina
         mostrarHora();
     </script>
 </body>
