--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>La hora actual es:</h1>
+    <h1>La hora actual para Luciana <3 es:</h1>
     <div id="hora"></div>
 
     <script>
